[gd_scene load_steps=2 format=3 uid="uid://c7ke8c3wv0oft"]

[ext_resource type="Script" uid="uid://urq3j51iycox" path="res://json_test/json_test.gd" id="1_s4o8w"]

[node name="json_test" type="Node" node_paths=PackedStringArray("file_name", "save_path", "load_file")]
script = ExtResource("1_s4o8w")
file_name = NodePath("VBoxContainer/FileName")
save_path = NodePath("VBoxContainer/DirectoryChose/SaveDirectoryPath")
load_file = NodePath("VBoxContainer/Load/LoadFile")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="FileName" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "File Name"

[node name="DirectoryChose" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Saving Location"

[node name="SaveDirectoryPath" type="FileDialog" parent="VBoxContainer/DirectoryChose"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="LoadFile" type="FileDialog" parent="VBoxContainer/Load"]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
show_hidden_files = true

[connection signal="pressed" from="VBoxContainer/DirectoryChose" to="." method="_on_directory_chose_pressed"]
[connection signal="button_up" from="VBoxContainer/Save" to="." method="_on_save_button_up"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="VBoxContainer/Load/LoadFile" to="." method="_on_load_file_file_selected"]
